brat/test/golden/error/vecpat3.brat.golden
Error in test/golden/error/vecpat3.brat@3:5-12
fst3([a,b]) = none
    ^^^^^^^

  Unification error: Couldn't force 1 to be 0

